# FastAPIBlogPlatform

./: README.md  auth.py  config.py  database.py  email_utils.py  image_utils.py  main.py  models.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: 49ec4d3a4602_increase_column_lengths_for_users.py  6ca15c5f5042_initial_schema.py  8de1b54d3a54_cascade_rule_added_to_post_user_id.py  9ef94e413b50_s3_bucket_added_image_url_changed.py  a8ddcac2860a_add_likes_to_post.py
routers/: posts.py  users.py
static/css/: main.css
static/js/: utils.js
templates/: account.html  error.html  home.html  layout.html  login.html  post.html  user_post.html
